tests/success/simplification/EtaReductionReduced.vix
loop (n : int) = loop n
test (x : int) = loop 1 x
