tests/type-error/CircularGlobal-MutualLambda.vix
f : int
f = (\x. g) 1

g : int
g = (\x. f) 1
